@@ -1,6 +1,6 @@
 # rc4.test - Copyright (C) 2004 Pat Thoyts <patthoyts@users.sourceforge.net>
 #
-# $Id: rc4.test,v 1.2 2004/07/04 00:16:53 patthoyts Exp $
+# $Id: rc4.test,v 1.3 2004/07/04 01:22:46 patthoyts Exp $
 
 # -------------------------------------------------------------------------
 # Initialize the test package
@@ -32,6 +32,16 @@ if {[info command ::rc4::rc4c] != {}} {
 } else {
     puts "- rc4 [package present rc4] (pure Tcl)"
 }
+
+# -------------------------------------------------------------------------
+
+test rc4-1.0 {rc4 basic command options} {
+    list [catch {::rc4::rc4} msg] $msg
+} [list 1 [tcltest::wrongNumArgs "rc4" "?-hex? -key key -in channel | string" 0]]
+
+test rc4-1.1 {rc4 basic command options} {
+    list [catch {::rc4::rc4 -key secret} msg] $msg
+} [list 1 [tcltest::wrongNumArgs "rc4" "?-hex? -key key -in channel | string" 0]]
 
 # -------------------------------------------------------------------------
 
